--- a/AppControl Manager/App.xaml
+++ b/AppControl Manager/App.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:media="using:CommunityToolkit.WinUI.Media"
     xmlns:ui="using:CommunityToolkit.WinUI"
+    xmlns:controls="using:CommunityToolkit.WinUI.Controls"
     xmlns:customUI="using:AppControlManager.CustomUIElements"
     xmlns:animations="using:CommunityToolkit.WinUI.Animations"
     xmlns:local="using:AppControlManager">
@@ -87,6 +88,20 @@
 
             <!-- Ensure the custom button maintains the regular button styles -->
             <Style TargetType="customUI:ButtonV2" BasedOn="{StaticResource DefaultButtonStyle}" />
+
+            <Style TargetType="controls:GridSplitter">
+                <Setter Property="Foreground" Value="DarkGray" />
+                <Setter Property="Opacity" Value="0.5" />
+                <Setter Property="Width" Value="6" />
+                <Setter Property="HorizontalAlignment" Value="Left" />
+                <Setter Property="ResizeDirection" Value="Auto" />
+                <Setter Property="ResizeBehavior" Value="BasedOnAlignment" />
+                <Setter Property="RenderTransform">
+                    <Setter.Value>
+                        <TranslateTransform X="-3" />
+                    </Setter.Value>
+                </Setter>
+            </Style>
 
         </ResourceDictionary>
     </Application.Resources>
